--- a/src/pages/guild-page/guild-page.html
+++ b/src/pages/guild-page/guild-page.html
@@ -19,4 +19,22 @@
 
 <ion-content padding>
 
+  <div style="position: relative">
+    <img src="assets/img/ListePersonnages.jpg">
+  </div>
+
+    <ion-item-group>
+  <ion-item-divider class="custom-class-divider"><b>Mes informations générales</b></ion-item-divider>
+</ion-item-group>
+
+<ion-item>
+  <ion-icon name = "game-controller-b" item-left large></ion-icon>
+  <h2> <b> Créé le :</b> {{YoloTest}} </h2> <!-- c'est pas fini -->
+</ion-item>
+
+<button ion-item *ngFor="let guild of GuildsInformations" (click)="getGuild(guild)">
+  <ion-icon name = "game-controller-b" item-left large></ion-icon>
+  <h2><b>{{guild.name}} [{{guild.tag}}]</b></h2>
+</button>
+
 </ion-content>
