Ajout Pages MesGuildes et MesPersonnages , Modif Styles , Réalisation page Mon Personnage

--- a/src/pages/guild-page/guild-page.html
+++ b/src/pages/guild-page/guild-page.html
@@ -17,15 +17,11 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
 
-  <div style="position: relative">
-    <img src="assets/img/ListePersonnages.jpg">
-  </div>
+  <ion-card>
 
-  <ion-item-group>
-
-    <ion-item-divider class="custom-class-divider"><b>Mes informations générales</b></ion-item-divider>
+    <ion-item-divider class="custom-class-divider"><b>Informations sur la guilde : </b></ion-item-divider>
 
 
     <ion-item>
@@ -75,6 +71,6 @@
       <h2><b>{{guild.name}} [{{guild.tag}}]</b></h2>
     </button>
 
-  </ion-item-group>
+  </ion-card>
 
 </ion-content>
