--- a/src/pages/page-personnage/pagePersonnage.html
+++ b/src/pages/page-personnage/pagePersonnage.html
@@ -1,13 +1,86 @@
-
 <ion-header>
+  <ion-navbar color="danger">
 
-  <ion-navbar color="secondary">
-    <ion-title>Personnage : </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+
+    <ion-title>{{character}}</ion-title>
+
+    <ion-buttons right>
+      <button ion-button icon-only (click)="logOut()">
+        <ion-icon name="log-out"></ion-icon>
+      </button>
+    </ion-buttons>
+
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+
+  <ion-card>
+
+    <ion-item-divider class="custom-class-divider"><b>informations générales : </b></ion-item-divider>
+        <ion-item>
+          <ion-icon name="game-controller-b" item-left large></ion-icon>
+          <h2><b>Race : </b>{{CharacterRace}}</h2>
+        </ion-item>
+
+        <ion-item>
+          <ion-icon name="game-controller-b" item-left large></ion-icon>
+          <h2><b>Genre : </b>{{CharacterGenre}}</h2>
+        </ion-item>
+
+        <ion-item>
+          <ion-icon name="game-controller-b" item-left large></ion-icon>
+          <h2><b>Profession : </b>{{CharacterProfession}}</h2>
+        </ion-item>
+
+        <ion-item>
+          <ion-icon name="game-controller-b" item-left large></ion-icon>
+          <h2><b>Niveau : </b>{{CharacterLevel}}</h2>
+        </ion-item>
+
+        <button ion-item *ngFor="let guild of CharacterGuild"(click)="goToGuild(guild)" text-wrap>
+          <ion-icon name="game-controller-b" item-left large></ion-icon>
+          <h2><b>Guilde représentée : </b>{{guild.name}} , [{{guild.tag}}]</h2>
+        </button>
+
+        <ion-item>
+          <ion-icon name="game-controller-b" item-left large></ion-icon>
+          <h2><b>Age : </b>{{CharacterAge}} jours</h2>
+        </ion-item>
+
+        <ion-item text-wrap>
+          <ion-icon name="game-controller-b" item-left large></ion-icon>
+          <h2><b>Date de création : </b>{{CharacterCreation}}</h2>
+        </ion-item>
+
+        <ion-item>
+          <ion-icon name="game-controller-b" item-left large></ion-icon>
+          <h2><b>Nombre de morts : </b>{{CharacterDeaths}}</h2>
+        </ion-item>
+
+        <ion-item-divider class="custom-class-divider"><b>Métiers : </b></ion-item-divider>
+
+        <ion-list *ngFor="let job of CharacterCrafting">
+
+          <ion-item>
+            <ion-icon name = "game-controller-b" item-left large></ion-icon>
+            <h2><b>{{job.discipline}}</b></h2>
+          </ion-item>
+          <ion-item>
+            <ion-icon name = "game-controller-b" item-left large></ion-icon>
+            <h2><b>Niveau : </b>{{job.rating}}</h2>
+          </ion-item>
+          <ion-item>
+            <ion-icon name = "game-controller-b" item-left large></ion-icon>
+            <h2><b>Actif : </b>{{isActive(job.active)}}</h2>
+          </ion-item>
+
+      </ion-list>
+
+  </ion-card>
 
 </ion-content>
