Ajout d'un slide et changement du style de l'appli

--- a/src/pages/page-personnage/pagePersonnage.html
+++ b/src/pages/page-personnage/pagePersonnage.html
@@ -81,6 +81,11 @@
 
       </ion-list>
 
+      <ion-item>
+        <ion-icon name="game-controller-b" item-left large></ion-icon>
+        <h2><b>Titre : </b>{{CharacterTitle}}</h2>
+      </ion-item>
+
   </ion-card>
 
 </ion-content>
