--- a/src/pages/mes-guildes/mes-guildes.html
+++ b/src/pages/mes-guildes/mes-guildes.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="danger">
+  <ion-navbar color="secondary">
 
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -17,11 +17,11 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="myBg">
 
-  <ion-card>
+  <ion-card class="custom-class-divider">
 
-    <button ion-item *ngFor="let guild of GuildsInformations" (click)="goToGuild(guild)">
+    <button class="custom-class-divider" ion-item *ngFor="let guild of GuildsInformations" (click)="goToGuild(guild)">
       <ion-icon name="game-controller-b" item-left large></ion-icon>
       <h2><b>{{guild.name}} [{{guild.tag}}]</b></h2>
     </button>
