--- a/src/pages/mes-personnages/mes-personnages.html
+++ b/src/pages/mes-personnages/mes-personnages.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="danger">
+  <ion-navbar color="secondary">
 
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -17,10 +17,10 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="myBg">
 
-  <ion-card>
-    <button ion-item *ngFor="let character of characters" (click)="goToCharacter(character)">
+  <ion-card class="custom-class-divider">
+    <button class="custom-class-divider" ion-item *ngFor="let character of characters" (click)="goToCharacter(character)">
       <ion-icon name="game-controller-b" item-left large></ion-icon>
       <h2><b>{{character}}</b></h2>
     </button>
