--- a/src/pages/page-accueil/pageAccueil.html
+++ b/src/pages/page-accueil/pageAccueil.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="danger">
+  <ion-navbar color="secondary">
 
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -19,7 +19,8 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="myBg">
+
   <ion-slides>
     <ion-slide>
       <h1>Slide 1</h1>
