--- a/src/pages/page-personnage/pagePersonnage.html
+++ b/src/pages/page-personnage/pagePersonnage.html
@@ -22,6 +22,7 @@
   <ion-card class="custom-class-divider">
 
     <ion-item-divider class="custom-class-divider"><b>informations générales : </b></ion-item-divider>
+
     <ion-item class="custom-class-divider">
       <ion-icon name="game-controller-b" item-left large></ion-icon>
       <h2><b>Race : </b>{{CharacterRace}}</h2>
@@ -71,15 +72,12 @@
 
     <ion-list *ngFor="let job of CharacterCrafting">
 
-      <ion-item class="custom-class-divider">
-        <ion-icon name = "game-controller-b" item-left large></ion-icon>
-        <h2><b>{{job.discipline}}</b></h2>
-      </ion-item>
+      <ion-item-divider class="custom-class-divider" no-lines><b>{{job.discipline}}</b></ion-item-divider>
       <ion-item class="custom-class-divider">
         <ion-icon name = "game-controller-b" item-left large></ion-icon>
         <h2><b>Niveau : </b>{{job.rating}}</h2>
       </ion-item>
-      <ion-item class="custom-class-divider">
+      <ion-item class="custom-class-divider" no-lines>
         <ion-icon name = "game-controller-b" item-left large></ion-icon>
         <h2><b>Actif : </b>{{isActive(job.active)}}</h2>
       </ion-item>
