--- a/src/pages/finishers/finishers.html
+++ b/src/pages/finishers/finishers.html
@@ -19,25 +19,7 @@ Ionic pages and navigation.
   <ion-grid>
 
 
-    <ion-row>
-      <ion-col width-33>
-        <ion-item no-lines>
-          <img src="assets/img/icon.png" (click)="openMenu()"/>
-          </ion-item >
-      </ion-col>
-      <ion-col width-33>
-        <ion-item no-lines>
-          <img src="assets/img/icon.png" (click)="openMenu()"/>
-          </ion-item >
-      </ion-col>
-      <ion-col width-33>
-        <ion-item no-lines>
-          <img src="assets/img/icon.png" (click)="openMenu()"/>
-          </ion-item >
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
+  <!--  <ion-row> version en dur comme ma
       <ion-col width-33>
         <ion-item no-lines>
           <img src="assets/img/icon.png" (click)="openMenu()"/>
@@ -53,7 +35,28 @@ Ionic pages and navigation.
           <img src="assets/img/icon.png" (click)="openMenu()"/>
         </ion-item >
       </ion-col>
-    </ion-row>
+    </ion-row> -->
+
+  <!--  <ion-row *ngFor="let licorne of finisherTab">
+      <ion-col width-33 >
+        <ion-item no-lines>
+          <img src="assets/img/icon.png" (click)="openMenu()"/>
+          </ion-item >
+      </ion-col>
+
+    </ion-row> -->
+
+    <ion-list>
+  <ion-item *ngFor="let licorne of finisherTab">
+    <ion-thumbnail item-left>
+        <img src="assets/img/icon.png" (click)="openMenu()"/>
+    </ion-thumbnail>
+    <h2>{{licorne.id}}</h2>
+    <p>{{licorne.permanent}}</p>
+    <button ion-button clear item-right>View</button>
+  </ion-item>
+</ion-list>
+
 
 
   </ion-grid>
@@ -61,6 +64,7 @@ Ionic pages and navigation.
   <button ion-button block (click)="openMenu()" >
     Show Action Sheet
   </button>
+
 
 
 </ion-content>
