--- a/src/pages/my-wallet/my-wallet.html
+++ b/src/pages/my-wallet/my-wallet.html
@@ -17,10 +17,10 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="myBg">
 
   <ion-item *ngFor="let currency of Currencies" class="custom-class-divider">
-    <div style="display:inline-block ; float: left"item-left><h2><b>{{currency.name}}</b></h2></div>
+    <div style="display:inline-block ; float: left" item-left><h2><b>{{currency.name}}</b></h2></div>
     <div style="display:inline ; float : right" item-right><h2><b>{{currency.amount}}</b></h2></div>
     <div style="display:inline-block ; float:right" item-right><img [src]="currency.img"></div>
   </ion-item>
