--- a/src/pages/finishers/finishers.html
+++ b/src/pages/finishers/finishers.html
@@ -18,53 +18,18 @@ Ionic pages and navigation.
 
   <ion-grid>
 
-
-  <!--  <ion-row> version en dur comme ma
-      <ion-col width-33>
-        <ion-item no-lines>
-          <img src="assets/img/icon.png" (click)="openMenu()"/>
-          </ion-item >
-      </ion-col>
-      <ion-col width-33>
-        <ion-item no-lines>
-          <img src="assets/img/icon.png" (click)="openMenu()"/>
-          </ion-item >
-      </ion-col>
-      <ion-col width-33>
-        <ion-item no-line>
-          <img src="assets/img/icon.png" (click)="openMenu()"/>
-        </ion-item >
-      </ion-col>
-    </ion-row> -->
-
-  <!--  <ion-row *ngFor="let licorne of finisherTab">
-      <ion-col width-33 >
-        <ion-item no-lines>
-          <img src="assets/img/icon.png" (click)="openMenu()"/>
-          </ion-item >
-      </ion-col>
-
-    </ion-row> -->
-
     <ion-list>
-  <ion-item *ngFor="let licorne of finisherTab">
+  <ion-item *ngFor="let licorne of infoFinishTab" text-wrap>
     <ion-thumbnail item-left>
-        <img src="assets/img/icon.png" (click)="openMenu()"/>
+        <img [src]="licorne.icon" (click)="openMenu(licorne)"/>
     </ion-thumbnail>
-    <h2>{{licorne.id}}</h2>
-    <p>{{licorne.permanent}}</p>
-    <button ion-button clear item-right>View</button>
+    <h2 >{{licorne.name}}</h2>
   </ion-item>
 </ion-list>
 
 
 
   </ion-grid>
-
-  <button ion-button block (click)="openMenu()" >
-    Show Action Sheet
-  </button>
-
 
 
 </ion-content>
