--- a/src/pages/page-personnage/pagePersonnage.html
+++ b/src/pages/page-personnage/pagePersonnage.html
@@ -46,12 +46,12 @@
       <h2><b>Niveau : </b>{{CharacterLevel}}</h2>
     </ion-item>
 
-    <ion-item class="custom-class-divider" *ngFor="let title of CharacterTitle">
+    <ion-item class="custom-class-divider" ion-item *ngFor="let obj of CharacterTitle" text-wrap>
       <ion-icon name="" large item-left></ion-icon>
-      <h2><b>Titre : </b>{{title.name}}</h2>
+      <h2><b>Titre : </b>{{obj.id}}</h2>
     </ion-item>
 
-    <button class="custom-class-divider" ion-item *ngFor="let guild of CharacterGuild"(click)="goToGuild(guild)" text-wrap>
+    <button class="custom-class-divider" ion-item *ngFor="let guild of CharacterGuild" (click)="goToGuild(guild)" text-wrap>
       <ion-icon name="" large item-left></ion-icon>
       <h2><b>Guilde représentée : </b>{{guild.name}} , [{{guild.tag}}]</h2>
     </button>
