--- a/src/pages/minis/minis.html
+++ b/src/pages/minis/minis.html
@@ -6,13 +6,33 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>minis</ion-title>
+
+
+  <ion-navbar color="secondary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+        <ion-title>Mini-Pets</ion-title>
   </ion-navbar>
+
 
 </ion-header>
 
+<ion-content padding class="page-minis">
 
-<ion-content padding>
+  <ion-grid>
+
+    <ion-list>
+  <ion-item *ngFor="let castor of infoMiniTab" text-wrap>
+    <ion-thumbnail item-left>
+        <img [src]="castor.icon"/>
+    </ion-thumbnail>
+    <h2 >{{castor.name}}</h2>
+  </ion-item>
+</ion-list>
+
+
+
+  </ion-grid>
 
 </ion-content>
