--- a/src/pages/page-accueil/pageAccueil.html
+++ b/src/pages/page-accueil/pageAccueil.html
@@ -21,15 +21,17 @@
 
 <ion-content class="myBg">
 
-  <ion-slides>
-    <ion-slide>
-      <h1>Slide 1</h1>
-    </ion-slide>
-    <ion-slide>
-      <h1>Slide 2</h1>
-    </ion-slide>
-    <ion-slide>
-      <h1>Slide 3</h1>
-    </ion-slide>
-  </ion-slides>
+    <ion-row wrap>
+      <ion-col>
+        <button ion-button color="secondary" large>Lol</button>
+        <button ion-button color="secondary" large>Lol</button>
+        <button ion-button color="secondary" large>Lol</button>
+        <button ion-button color="secondary" large>Lol</button>
+        <button ion-button color="secondary" large>Lol</button>
+        <button ion-button color="secondary" large>Lol</button>
+        <button ion-button color="secondary" large>Lol</button>
+        <button ion-button color="secondary" large>Lol</button>
+      </ion-col>
+    </ion-row>
+
 </ion-content>
